before demetrio's formulas

--- a/content/dmf2rgnoself.tex
+++ b/content/dmf2rgnoself.tex
@@ -38,5 +38,8 @@ The results presented here are (in the usual fRG units) for $U=6.8t$, $T=0.08t$,
 \item The self energy suppresses the charge-channel (see Fig. \ref{dmf2rglam}), while being less effective on the AF vertex; 
 \item 	The AF channel flow is unusual: it grows towards large coupling value, without "exploding" for a well defined value of critical $\Lambda$. This effect can be possibly due either to the the "interpolative" cutoff used or to a feedback effect of the self energy that avoids a sudden "explosion" of the vertex. 
 \item The momentum dependence of the self-energy is relatively modest: there are deviations from the local DMFT self energy, but the self energy remains Fermi-liquid like in all the BZ, see Fig. \ref{dmf2self} Why such a small change of $\Sigma$ has such a large consequence on the flow? 
+
+\item \textbf{TODO}: Study of the effect of the momentum dependence of the self-energy on the bubble. Compare $\nu$ dependent bubble at a given cutoff with and without self energy feedback. Subtract then local bubble to be more consistent. 
+\item \textbf{TODO}: How is the ferromagnetism affected by the self energy? Is it a general effect that the self energy suppress the bubble more at $0,0$ than at $\pi,\pi$i? 
 \end{itemize} 
 
