--- a/content/frgnoself.tex
+++ b/content/frgnoself.tex
@@ -21,7 +21,7 @@ If not otherwise specified we measure energies in units of $D=4t$, i.e., $t'=-0.
 
 In Fig \ref{phasediag_van_hove} and \ref{phasediag_van_hove_plus} we show  the critical scale as a function of $t'$, for, respectively, van Hove filling, and van Hove filling plus 7\%.    
 
-The fininte temperature acts as a cutoff for divergencies in the bare bubble. 
+The finite temperature acts as a cutoff for divergences in the bare bubble. 
 
 In Fig. \ref{phasediag_van_hoveSTATIC} we show the same but for a static vertex, and for a temperature $T= 0.02t$. 
 \begin{figure}
@@ -33,7 +33,7 @@ In Fig. \ref{phasediag_van_hoveSTATIC} we show the same but for a static vertex,
 
 \begin{figure}
 \includegraphics[scale=0.32,angle = 90]{images/vanhovelam.png}
-\caption{Flow of the maximum of the absolute value of each channel for differnt values of $t'$ and at van Hove filling.
+\caption{Flow of the maximum of the absolute value of each channel for different values of $t'$ and at van Hove filling.
 } 
 \label{lamvan} 
 \end{figure}
@@ -64,19 +64,19 @@ In Fig. \ref{phasediag_van_hoveSTATIC} we show the same but for a static vertex,
 
 In the spirit of the "interaction cutoff" the critical scale can be associated with the maximal value of the interaction $U_{\mathrm{flow}}\approx(1-\Lambda)^2 U$  for which the flow would converge (at the given temperature). 
 
-In a purely weak coupling scenario one can assume a monothonic relation between the interaction value and the critical temperature, and hence we can loosely associate the critical scale whit a critical temperature.
+In a purely weak coupling scenario one can assume a monotonic relation between the interaction value and the critical temperature, and hence we can loosely associate the critical scale whit a critical temperature.
 
 We have double-checked the consistency of our results by also considering a frequency selective cuffoff, which substitutes: $i\omega \rightarrow i\mathrm{sign} \omega \sqrt{\omega^2+\Lambda^2}$. 
 
 \begin{figure}
 \includegraphics[scale=0.32,angle =90]{images/freqvanhove.png}
-\caption{\textbf{frequency cutoff} Flow of the maximum of the absolute value of each channel for differnt values of $t'$ and at van Hove filling. } 
+\caption{\textbf{frequency cutoff} Flow of the maximum of the absolute value of each channel for different values of $t'$ and at van Hove filling. } 
 \label{freqlam} 
 \end{figure}
 
 \begin{figure}
 \includegraphics[scale=0.32,angle =90]{images/vanhovepluslambda.png}
-\caption{Flow of the maximum of the absolute value of each channel for differnt values of $t'$ and at van Hove filling $+7 \%$.
+\caption{Flow of the maximum of the absolute value of each channel for different values of $t'$ and at van Hove filling $+7 \%$.
 } 
 \label{lamvanplus} 
 \end{figure}
@@ -115,7 +115,7 @@ The magnetic susceptibility is larger due to the flat frequency structure of the
 \end{itemize} 
  
 \begin{figure}
-\includegraphics[scale=0.4]{images/Merged_tpri0105.png}
+\includegraphics[scale=0.3]{images/Merged_tpri0105.png}
 \caption{Frequency structure of the channels. Top left: magnetic channel for momentum closet to $\pi,\pi$ where the vertex has a local maximum, top right: magnetic channel for momentum close to $0,0$, in both cases external frequency transfer $\Omega=0$. 
 Bottom left: charge channel for external frequency transfer $\Omega=0$ and transfer momentum $0,0$, bottom right: the same but for \emph{finite} frequency transfer $\Omega = 2\pi/\beta$. } 
 \label{structurechargefrg} 
