--- a/content/frgself.tex
+++ b/content/frgself.tex
@@ -6,7 +6,7 @@
 
 \item Self energy lowers the critical scale.
 
-\item For the set of parameters consideresd ($U=4t$, $T=0.08t$, $t'=-0.10$, van Hove filling) the self energy seemed to be Fermi liquid like and did not show any sign of divergent behavior. 
+\item For the set of parameters considered ($U=4t$, $T=0.08t$, $t'=-0.10$, van Hove filling) the self energy seemed to be Fermi liquid like and did not show any sign of divergent behavior. 
 
 \item In figure \ref{fermisurface} one can see that the self energy affects the Fermi surface which gets broadened, as we deduce from the momentum dependent occupation shown. 
 
