--- a/content/perpendicular.tex
+++ b/content/perpendicular.tex
@@ -7,17 +7,21 @@ As a poor man way to understand the frequency dependence of the charge channel w
 
 \item Magnetic RPA local effective interaction:
 
-\item \textbf{SCRIVERE FORMULA DELLA BOLLA!}
-
 \begin{equation}
   U_{eff}(\Omega) =\int_{\boldsymbol{Q}} \frac{U}{ 1 - U \Pi^{\Omega}_{\boldsymbol{Q}} }
 \end{equation}
-(only the momentum integrated interaction enters in the momentum decomposition considered)
+(only the momentum integrated interaction enters in the momentum decomposition considered). We defined 
+the PH bubble:
+
+\begin{equation}
+\Pi^{\Omega}_{\boldsymbol{Q}} = T\sum_{\nu} \Pi^{\Omega,\nu}_{\boldsymbol{Q}} = \
+-T\sum_{\nu,\boldsymbol{k}} G(\nu,\boldsymbol{k})G(\nu+\Omega,\boldsymbol{k}+\boldsymbol{Q})
+\end{equation}
 
 \item the charge channel is computed by RPA: 
 \begin{equation}
-  \Phi_{charge}^{\Omega,\nu,\nu'}(\boldsymbol{Q}) = U_{eff}(\Omega) 
-  \left[ 1+  \Pi^{\Omega,\nu}_{\boldsymbol{Q}} U_{eff}(\nu'-\nu) \right]_{\nu,\nu'}^{-1},
+  \Phi_{charge}^{\Omega,\nu_1,\nu_2}(\boldsymbol{Q}) = U_{eff}(\Omega) 
+  \left[ \delta_{\nu,\nu'}+  \Pi^{\Omega,\nu}_{\boldsymbol{Q}} U_{eff}(\nu'-\nu) \right]_{\nu_1,\nu_2}^{-1},
 \end{equation}
 where it is very important to understand the equations as matrix (in the frequency space) equalities. 
 
