Ciro's last iteration. Ball to Demi

--- a/content/dmf2rgnoself.tex
+++ b/content/dmf2rgnoself.tex
@@ -16,7 +16,7 @@ The results presented here are (in the usual fRG units) for $U=6.8t$, $T=0.08t$,
 \subparagraph{Results} 
 \begin{itemize}
 
-\item The charge channel instability is present also in DMF$^2$RG, even if the DMFT self energy broadens the Fermi surface, see Fig. \ref{dmf2rflam}.  
+\item The charge channel instability is present also in DMF$^2$RG, even if the DMFT self energy broadens the Fermi surface, see Fig. \ref{dmf2rglam}.  
 
 \item At large coupling, and without self-energy feedback, we have observed a divergence of the charge channel for any parameter set studied (excluding the case of particle-hole symmetry)$\rightarrow$ up to now the charge-channel divergence is the bottleneck of DMF$^2$RG;  
 
