--- a/content/frgnoself.tex
+++ b/content/frgnoself.tex
@@ -96,8 +96,14 @@ We have double-checked the consistency of our results by also considering a freq
 
 \item In Fig. \ref{lamvan} and \ref{lamvanplus} one can see that the flow of the max in the charge-channel follows the maximum in the Ferromagnetism. 
 
-\item as a function of $t'$ it seems that the charge divergence arises as soon it appears a local maximum close to $0,0$ in the magnetic susceptibility, TODO:add plot. 
-
+\item as a function of $t'$ it seems that the charge divergence arises as soon it appears a local maximum close to $0,0$ in the magnetic susceptibility, see Fig. \ref{susceptibilityfrg}. 
+\begin{figure}
+\includegraphics[scale=0.25]{images/susceptibilityfrg.png}
+\caption{ Magnetic susceptibility  in the BZ computed by fRG, for the $t'$ points where the charge channel shows the divergence. 
+Top $t'=-0.09t$ (left), $t'=-0.095$ (right). Bottom $t'=-0.100$ (left), $t'=-0.105$ (right). Note that the increasing the next neighbors hopping the maxima in the susceptibility shift more to the region near $\mathbf{Q} = 0,0$.
+ } 
+\label{susceptibilityfrg} 
+\end{figure}
 %\item We observed the charge channel divergence also in region away from van Hove filling, where the Ferromagnetism is suppressed (not shown). 
  
 \item The \textit{divergence} of the channel is associated with a very specific \textit{frequency-structure}. The frequency-structure can be explained (section about perpendicular ladders). 
