--- a/content/frgself.tex
+++ b/content/frgself.tex
@@ -2,7 +2,7 @@
 
 \item The self-energy flow is unreliable. It suffers from the finite frequency box of the vertex. 
 
-\item Self energy inclusion suppresses the charge channel in favor of FM fluctuations, see FIg. \ref{selfsuppresfrg}. 
+\item Self energy inclusion suppresses the charge channel in favor of FM fluctuations, see Fig. \ref{selfsuppressfrg}. 
 
 \item Self energy lowers the critical scale.
 
